# ShadowSSH

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_deploy.sh  vcpkg.json
.github/workflows/: release.yml
assets/icon/: ShadowSSH.icns
include/: Application.h  CredentialStore.h  EditorManager.h  MacMenu.h  Platform.h  SFTPClient.h  SSHClient.h  SSHConfigParser.h  SSHStructs.h  SystemMonitor.h  Terminal.h
packaging/macos/: Info.plist.in
scripts/: build.sh  make_icns.sh  make_icon.py
src/: Application.cpp  CredentialStore.cpp  EditorManager.cpp  SFTPClient.cpp  SSHClient.cpp  SSHConfigParser.cpp  SystemMonitor.cpp  Terminal.cpp  main.cpp
src/mac/: MenuBridge.mm
src/platform/: CredentialStore_linux.cpp  CredentialStore_mac.mm  CredentialStore_win.cpp  Platform_common.cpp  Platform_linux.cpp  Platform_mac.mm  Platform_win.cpp
src/terminal/: Terminal.cpp
src/terminal/libvterm/include/: vterm.h
